Небольшой адаптив, исправления

--- a/data/static/html/base_with_status.html
+++ b/data/static/html/base_with_status.html
@@ -26,7 +26,7 @@
     <div class="content2">
       {% block base_with_status_content %}{% endblock %}
     </div>
-    <div class="status">{% include "status.html" %}</div>
+    <div class="status d-none d-sm-block">{% include "status.html" %}</div>
   </div>
   {% endblock %}
 </body>
