--- a/data/static/html/base.html
+++ b/data/static/html/base.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="/"> 🙋🏼 {{ user.fullName }}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Выход</a>
+            <a class="nav-link" id="logout" href="#">Выход</a>
           </li>
           {% endif %}
         </ul>
@@ -56,6 +56,15 @@
     $(document).ready(function () {
       $('.navbar-toggler').on('click', function () {
         $('#navbarNav').collapse('toggle');
+      });
+      $('#logout').on('click', function () {
+        $.ajax({
+          url: '/logout',
+          type: 'POST',
+          success: function () {
+            window.location.href = '/';
+          }
+        });
       });
     });
   </script>
