--- a/data/static/html/login.html
+++ b/data/static/html/login.html
@@ -21,12 +21,14 @@ block base_content %}
 </div>
 
 
-<a class="m-2" href="/admin/login" style="position: absolute; bottom: 0; right: 0; color: #00000022">Администратор
+<a class="m-2 d-none d-sm-block" href="/admin/login"
+  style="position: absolute; bottom: 0; right: 0; color: #00000022">Администратор
 </a>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     flatpickr(".datepicker", {
       dateFormat: "d.m.Y",
+      locale: "ru"
     });
     $(".datepicker").css("background-color", "white");
   });
