--- a/data/static/html/admin_manage_programs.html
+++ b/data/static/html/admin_manage_programs.html
@@ -30,6 +30,27 @@ block base_content %}
       </div>
     </li>
   </ol>
+
+  <ol class="list-group w-50 mt-3">
+    {% for program in programs %}
+    <li class="list-group-item d-flex justify-content-between align-items-start">
+      <div class="ms-2 me-auto">
+        <a href="/admin/edit_program?program_id={{program.baseId}}" class="fw-bold">Редактировать программу
+          "{{program.brief}}"</a>
+        <br>
+        Изменить данные о существующей программе
+
+      </div>
+      {% if program.baseId in active_programs_ids %}
+      <span class="badge text-bg-success rounded-pill">Активная</span>
+      {% elif program.baseId in active_or_uncompleted_programs_ids %}
+      <span class="badge text-bg-danger rounded-pill">Не настроена</span>
+      {% else %}
+      <span class="badge text-bg-secondary rounded-pill">Не активная</span>
+      {% endif %}
+    </li>
+    {% endfor %}
+  </ol>
   <div class="modal fade" id="addProgramModal" tabindex="-1" role="dialog" aria-labelledby="addProgramModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
