--- a/data/static/html/admin_rejected_users_by_docs.html
+++ b/data/static/html/admin_rejected_users_by_docs.html
@@ -2,7 +2,7 @@
 block base_content %}
 
 <div class="m-4">
-  <h2>Отклоненные заявки из-за документов</h2>
+  <h2 class="mb-3">Отклоненные заявки из-за документов</h2>
   <div>
     <div>
       <table class="table sortable">
