--- a/data/static/html/send_docs.html
+++ b/data/static/html/send_docs.html
@@ -4,7 +4,11 @@
 <div class="container">
   <h1 class="mt-4">Загрузка документов</h1>
 
-  <p>Загрузите сканы/фото документов. Для сканирования с телефона можно воспользоваться приложением <a href="https://www.adobe.com/acrobat/mobile/scanner-app.html">Adobe Scan</a>. Загружать можно в форматах <b>.jpg, .png, .pdf</b></p>
+  <a href="/application/fill_info">← К заполнению данных</a>
+
+  <p class="mt-3">Загрузите сканы/фото документов. Для сканирования с телефона можно воспользоваться приложением <a
+      href="https://www.adobe.com/acrobat/mobile/scanner-app.html">Adobe Scan</a>. Загружать можно в форматах <b>.jpg,
+      .png, .pdf</b></p>
 
   {% if lastRejectionReason %}
   <div class="warning mt-4">
