--- a/data/static/html/admin_competition.html
+++ b/data/static/html/admin_competition.html
@@ -1,7 +1,7 @@
 {% extends "admin_base.html" %} {% block title %} Конкурс {% endblock %} {%
 block base_content %}
 <div class="m-4">
-  <h2>Конкурс</h2>
+  <h2 class="mb-3">Конкурс</h2>
   <div>
     <div>
       <table class="table sortable">
@@ -77,6 +77,11 @@ block base_content %}
 
 <script>
   document.addEventListener("DOMContentLoaded", function () {
+
+    $(".close").addClass("btn-close");
+
+    $(".close").children().remove();
+
     // Обработчик для кнопки "Подтвердить"
     document.querySelectorAll(".confirm-btn").forEach(function (button) {
       button.addEventListener("click", function () {
