--- a/data/static/html/admin_edit_users.html
+++ b/data/static/html/admin_edit_users.html
@@ -225,6 +225,7 @@ block base_content %}
         .then(response => response.json())
         .then(data => {
           console.log('Success:', data);
+          window.location.reload();
         })
         .catch((error) => {
           console.error('Error:', error);
@@ -250,6 +251,7 @@ block base_content %}
         .then(response => response.json())
         .then(data => {
           console.log('Success:', data);
+          window.location.reload();
         })
         .catch((error) => {
           console.error('Error:', error);
