--- a/data/static/html/registration.html
+++ b/data/static/html/registration.html
@@ -43,6 +43,10 @@ base_content %}
     <button type="submit" class="btn btn-primary mb-3">
       Зарегистрироваться
     </button>
+    <br>
+    <small style="color: #00000055" s>Нажимая на кнопку "Зарегистрироваться", вы принимаете условия <a
+        href="{{ termsUrl }}" style="color: #00000066">политики обработки
+        данных</a>.</small>
   </form>
 </div>
 
