--- a/data/static/html/fill_data.html
+++ b/data/static/html/fill_data.html
@@ -41,12 +41,11 @@ endblock %} {% block base_with_status_content %}
               <h3 id="program-title"></h3>
               <div id="program-info" class="d-flex align-items-center">
                 <p id="program-difficulty-label">Сложность:</p>
-                <div id="stars-container" style="display: flex">[Звезды]</div>
+                <div id="stars-container" style="display: flex"></div>
               </div>
               <p id="program-hours" style="margin-bottom: 0px"></p>
               <p id="program-cost"></p>
               <p id="program-description" class="fixed-width-description">
-                [Описание программы]
               </p>
             </div>
             <div>
@@ -70,7 +69,7 @@ endblock %} {% block base_with_status_content %}
     <div class="mb-3">
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="checkbox" id="hasLaptop" name="hasLaptop" />
-        <label for="hasLaptop" class="form-check-label">У меня есть ноутбук, который могу приносить на занятия</label>
+        <label for="hasLaptop" class="form-check-label">Могу ходить на занятия со своим ноутбуком</label>
       </div>
     </div>
     <div class="mb-3">
