--- a/data/static/html/send_docs.html
+++ b/data/static/html/send_docs.html
@@ -90,7 +90,7 @@
       <input type="text" class="form-control" id="captcha" name="captcha" required />
     </div>
 
-    <div class="warning">
+    <div class="info">
       После отправки мы будем рассматривать документы и данные и уведомим
       вас о том, были ли они приняты или нужно внести изменения.
     </div>
