--- a/data/static/html/login.html
+++ b/data/static/html/login.html
@@ -6,7 +6,8 @@ block base_content %}
   <form class="mt-4" id="loginForm" method="post" action="/token">
     <div class="form-group mb-3">
       <label for="fullName">ФИО обучающегося:</label>
-      <input type="text" class="form-control" id="fullName" name="fullName" required value="Иванов Иван Иванович" />
+      <input type="text" class="form-control" id="fullName" name="fullName" required
+        placeholder="Иванов Иван Иванович" />
     </div>
     <div class="form-group mb-3">
       <label for="birthDate">Дата рождения:</label>
