--- a/data/static/html/registration.html
+++ b/data/static/html/registration.html
@@ -5,11 +5,16 @@ base_content %}
   <form class="mt-4" id="registrationForm" method="post" action="/registration">
     <div class="form-group mb-3">
       <label for="fullName">ФИО обучающегося:</label>
-      <input type="text" class="form-control" id="fullName" name="fullName" required value="Иванов Иван Иванович" />
+      <input type="text" class="form-control" id="fullName" name="fullName" required
+        placeholder="Иванов Иван Иванович" />
     </div>
     <div class="form-group mb-3">
       <label for="email">Email обучающегося:</label>
-      <input type="email" class="form-control" id="email" name="email" required value="ivanov@example.com" />
+      <input type="email" class="form-control" id="email" name="email" required placeholder="ivanov@example.com" />
+    </div>
+    <div class="form-group mb-3">
+      <label for="parentEmail">Email представителя:</label>
+      <input type="email" class="form-control" id="parentEmail" name="parentEmail" placeholder="parent@example.com" />
     </div>
     <div class="form-group mb-3">
       <label for="password">Пароль:</label>
@@ -20,20 +25,16 @@ base_content %}
       <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required />
     </div>
     <div class="form-group mb-3">
-      <label for="parentEmail">Email представителя (опционально):</label>
-      <input type="email" class="form-control" id="parentEmail" name="parentEmail" value="parent@example.com" />
-    </div>
-    <div class="form-group mb-3">
-      <label for="school">Основная школа:</label>
-      <input type="text" class="form-control" id="school" name="school" required value="Школа №123" />
+      <label for="school">Школа:</label>
+      <input type="text" class="form-control" id="school" name="school" required placeholder="Школа №1" />
     </div>
     <div class="form-group mb-3">
       <label for="schoolClass">Класс:</label>
-      <input type="number" class="form-control" id="schoolClass" name="schoolClass" required value="2015" />
+      <input type="number" class="form-control" id="schoolClass" name="schoolClass" placeholder="9" />
     </div>
     <div class="form-group mb-3">
-      <label for="birthDate">Дата рождения (ДД.ММ.ГГГГ):</label>
-      <input type="text" class="form-control" id="birthDate" name="birthDate" required placeholder="ДД.ММ.ГГГГ" />
+      <label for="birthDate">Дата рождения:</label>
+      <input type="text" class="form-control" id="birthDate" name="birthDate" required />
     </div>
     <div class="form-group mb-3">
       <label for="captcha">Введите сообщение с картинки:</label><br />
@@ -44,7 +45,7 @@ base_content %}
       Зарегистрироваться
     </button>
     <br>
-    <small style="color: #00000055" s>Нажимая на кнопку "Зарегистрироваться", вы принимаете условия <a
+    <small style="color: #00000055" s>Нажимая кнопку "Зарегистрироваться", вы принимаете условия <a
         href="{{ termsUrl }}" style="color: #00000066">политики обработки
         данных</a>.</small>
   </form>
