--- a/data/static/html/registration.html
+++ b/data/static/html/registration.html
@@ -45,9 +45,11 @@ base_content %}
       Зарегистрироваться
     </button>
     <br>
-    <small style="color: #00000055" s>Нажимая кнопку "Зарегистрироваться", вы принимаете условия <a
-        href="{{ termsUrl }}" style="color: #00000066">политики обработки
-        данных</a>.</small>
+    <div class="mb-3">
+      <small style="color: #00000055" s>Нажимая кнопку "Зарегистрироваться", вы принимаете условия <a
+          href="{{ termsUrl }}" style="color: #007df185">политики обработки
+          данных</a>.</small>
+    </div>
   </form>
 </div>
 
