--- a/data/static/html/dashboard.html
+++ b/data/static/html/dashboard.html
@@ -20,8 +20,27 @@ block base_content %}
         "" %} Телефон родителя: {{user.parentPhone}} <br />
         {% endif %} Школа: {{user.school}}, {{user.schoolClass}} класс <br />
       </p>
-      <button data-bs-toggle="modal" data-bs-target="#setPasswordModal" class="btn btn-primary mb-3">Сменить
-        пароль</button>
+
+      <div class="d-grid gap-2 col-6">
+        <a href="/application" class="btn btn-success">
+          Подать заявление на обучение
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            class="bi bi-rocket-takeoff-fill ms-1" viewBox="0 0 16 16">
+            <path
+              d="M12.17 9.53c2.307-2.592 3.278-4.684 3.641-6.218.21-.887.214-1.58.16-2.065a3.6 3.6 0 0 0-.108-.563 2 2 0 0 0-.078-.23V.453c-.073-.164-.168-.234-.352-.295a2 2 0 0 0-.16-.045 4 4 0 0 0-.57-.093c-.49-.044-1.19-.03-2.08.188-1.536.374-3.618 1.343-6.161 3.604l-2.4.238h-.006a2.55 2.55 0 0 0-1.524.734L.15 7.17a.512.512 0 0 0 .433.868l1.896-.271c.28-.04.592.013.955.132.232.076.437.16.655.248l.203.083c.196.816.66 1.58 1.275 2.195.613.614 1.376 1.08 2.191 1.277l.082.202c.089.218.173.424.249.657.118.363.172.676.132.956l-.271 1.9a.512.512 0 0 0 .867.433l2.382-2.386c.41-.41.668-.949.732-1.526zm.11-3.699c-.797.8-1.93.961-2.528.362-.598-.6-.436-1.733.361-2.532.798-.799 1.93-.96 2.528-.361s.437 1.732-.36 2.531Z" />
+            <path
+              d="M5.205 10.787a7.6 7.6 0 0 0 1.804 1.352c-1.118 1.007-4.929 2.028-5.054 1.903-.126-.127.737-4.189 1.839-5.18.346.69.837 1.35 1.411 1.925" />
+          </svg>
+        </a>
+        {% if user.applicationTeacher and user.applicationTeacher.relevantJournalUrl %}
+        <a href="{{ user.applicationTeacher.relevantJournalUrl  }}" class="btn btn-outline-primary">
+          Открыть журнал
+        </a>
+        {% endif %}
+        <button data-bs-toggle="modal" data-bs-target="#setPasswordModal" class="btn btn-outline-primary mb-3">Сменить
+          пароль</button>
+      </div>
+
 
       <div class="modal fade" id="setPasswordModal" tabindex="-1" role="dialog" aria-labelledby="addProgramModalLabel"
         aria-hidden="true">
@@ -53,23 +72,20 @@ block base_content %}
         </div>
       </div>
 
-      <a href="/application" class="btn btn-success mb-3">
-        Подать заявление на обучение
-      </a>
-      {% if user.applicationTeacher and user.applicationTeacher.relevantJournalUrl %}
-      <a href="{{ user.applicationTeacher.relevantJournalUrl  }}" class="btn btn-primary mb-3">
-        Открыть журнал
-      </a>
-      {% endif %}
     </div>
-    <div class="col-md-8">
+    <div class="col-md-6">
       {% if user.completedPrograms %}
       <h4>Пройденные программы обучения</h4>
       <ul class="list-group mb-3">
         {% for completedProgram in user.completedPrograms %}
         <li class="list-group-item">{{completedProgram.brief}} ({{completedProgram.year}}), Оценка:
           {{completedProgram.grade}}{% if completedProgram.diploma %}<b class="ml-3" data-bs-toggle="tooltip"
-            data-bs-placement="left" title="Грамота за лучший результат среди группы">, Грамота ⭐</b>{% endif %}</li>
+            data-bs-placement="left" title="Грамота за лучший результат среди группы"><svg
+              xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              class="bi bi-trophy-fill ms-2" style="color: rgb(244, 208, 7)" viewBox="0 0 16 16">
+              <path
+                d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5q0 .807-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33 33 0 0 1 2.5.5m.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935m10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935" />
+            </svg></b>{% endif %}</li>
         {% endfor %}
       </ul>
       {% endif %}
